# protoflat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
benchmark/: proto3.cpp  protoflat.cpp
include/: protoflat.h
protoc-gen-protoflat/: main.cpp  protoflat_generator.cpp  protoflat_generator.h
tests/: test.proto  test2.proto  tests.cpp
